--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <main>
     <app-header></app-header>
-    <router-outlet></router-outlet>
+    <router-outlet></router-outlet> <!-- Placeholder for routing components -->
 </main>
