--- a/src/app/components/details/details.component.scss
+++ b/src/app/components/details/details.component.scss
@@ -125,11 +125,9 @@
   button.primary {
     width: 100%;
     padding: 15px;
-    background: var(--primary-color);
-    color: white;
     font-size: 18px;
     font-weight: 600;
-    border: none;
+    border:#2c3e50;
     border-radius: 8px;
     cursor: pointer;
     transition: background 0.3s ease;
